syntax = "proto3";

package rw.hallo_world;

service CSharpService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service DartMain {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}


message HelloRequest {
  bool no_recursion = 1;  
  int32 dart_count = 2;
  int32 dart_id = 3;
  int32 csharp_id = 4;
}

message HelloReply {
  int32 dart_id = 1;
  int32 csharp_id = 2;
  int32 dart_count = 3;
}
